<resources>
    <string name="app_name">DialogPackage</string>

    <string name="dialog_descr">Instala ahora la nueva versión de </string>
    <string name="dialog_descr_2"> que contiene nuevos cambios porque probablemente esta sea borrada de Google Play pronto</string>
    <string name="dialog_title">¡Mantenimiento!</string>

    <string name="dialog_accept">Descargar</string>


    <string name="dialog_maintaneance">Mantenimiento programado</string>
    <string name="we_maintaneance">Estamos en mantenimiento, disfruta estas otras mientras: </string>


    <string name="dialog_desc_maint">Hola, estamos en mantenimiento, pero puedes seguir disfrutando nuestro contenido en esta app…</string>
    <string name="dialog_cancel">Salir</string>
    <string name="dialog_ver_title">¡Leer con mucha atención!</string>
    <string name="dialog_ver_desc">Con esta actualización hemos cambiado de aplicación y notarás que hay dos aplicaciones de </string>
    <string name="dialog_ver_desc2">. Hay una version y la actual que estás usando. Es importante que desinstales la aplicación vieja, nosotros te lo haremos muy facil solo da al boton "Desinstalar version anterior" y te aparecerá un dialogo preguntandote si quieres desinstalar la app, tranquilo es la app vieja la que no sirve por favor desinstala para que esta alerta no te aparezca mas. ¡Muchas gracias por tu colaboracion!</string>
    <string name="uninstall">Desinstala version anterior</string>


    <!-- DIALOG ADVERTENCY -->

    <string name="dialog_advertency_t">¡Advertencia!</string>
    <string name="dialog_advertency_des">Ten cuidado que los links de reproduccion podrían estar caídos y muchos de los filehosters no soportan reanudar cargas tras un tiempo prolongado, si la reproducción es lenta o falla considera que no es culpa o problema de nuestra app, la velocidad de carga o si falla depende exclusivamente del videohoster donde esta almacenado el archivo, nuestra app no puede garantizar la reproduccion de los capitulos perfectamente. Eso si, hacemos lo mejor para que la experiencia sea mucho mas satisfactoria</string>
    <string name="dialog_advertency_ok">Entendido</string>
    <string name="dialog_advertency_noappear">No mostrar más</string>

    <!-- PLAYER SELECT -->

    <string name="select_player">Seleccionar reproductor</string>
    <string name="info_player" translatable="false">No temas, nuestro contenido se reproduce mejor en cualquiera de estos reproductores elige uno y disfruta de nuestro contenido!</string>
    <string name="player_go">Reproducir</string>
    <string name="cancel">Cancelar</string>
    <string name="ok_maint">Ver más</string>
    <string name="loading_dialog">Cargando...</string>
    <string name="loading_dialog_desc">Cargando información</string>
    <string name="loading_ok">¡Vale!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="installapp">Instalar</string>
    <string name="free">Free</string>

    <string name="doyoulike">Do you like</string>
    <string name="rate_info">Are you enjoy our app? Rate our app in the store to improve more</string>
    <string name="more_later">Later</string>
    <string name="rate_btn">Submit</string>
    <string name="never_rate">Never</string>
    <string name="positive_comment">Thanks!!</string>
    <string name="negative_comment">Thanks for your rating, help us to improve more!</string>
    <string name="send_mail">Send email to admins</string>

    <string name="new_version_">New app version!</string>
    <string name="new_version_desc">There are a new version of %s in Google Play, donwload it now!</string>

</resources>
