<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginEnd="65dp"
    android:layout_marginStart="65dp"
    android:layout_marginBottom="90dp"
    android:layout_marginTop="90dp"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/ic_warn"
            android:tint="#F3701E"
android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dialog_ver_title"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="3dp"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/text_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/dialog_ver_desc"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:padding="3dp"
        />

    <TextView
        android:id="@+id/btnversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uninstall"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:textColor="@color/colorAccent"
        android:padding="3dp"
        />

</LinearLayout>