<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/bj_round_top"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:text="@string/new_version_"
        android:textColor="@color/txt_color"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/desc_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:text="@string/new_version_desc"
        android:textColor="@color/txt_color"
        android:textSize="14sp"
        android:textStyle="normal" />

    <androidx.cardview.widget.CardView
        android:id="@+id/install"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        app:cardBackgroundColor="#058460"
        app:cardCornerRadius="1dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/installapp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/google_"
        />

</LinearLayout>