<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="360dp">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="360dp"
    android:orientation="vertical"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="35dp"
    android:background="@color/backgroundPlayer">







<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/kk"
    >
    <com.yarolegovich.discretescrollview.DiscreteScrollView
        android:id="@+id/reprod"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">


    </com.yarolegovich.discretescrollview.DiscreteScrollView>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/select_player"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/textPlayer"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="@string/info_player"
        android:textColor="@color/textPlayer"
        android:textSize="12sp" />

</RelativeLayout>








</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-48dp"
        android:gravity="center"
        android:id="@+id/lin_ss"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/backbutton"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/textPlayer"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/go_player"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/backbutton"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/player_go"
            android:textColor="@color/textPlayer"
            android:textSize="14sp" />



    </LinearLayout>

</LinearLayout>


</RelativeLayout>