<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:id="@+id/f"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/anothert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/we_maintaneance"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:visibility="gone"
                android:textSize="16sp"
                android:textStyle="normal" />

           <ImageView
               android:layout_width="match_parent"
               android:layout_height="155dp"
               android:id="@+id/iconimg"
               app:srcCompat="@drawable/downic"
               android:visibility="gone"
               />

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:id="@+id/gif_img"
                android:src="@drawable/gif_d"
                android:scaleType="fitXY"
                />

            <TextView
                android:id="@+id/title_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/dialog_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desc_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/roboto"
                android:padding="5dp"
                android:maxLines="2"
                android:text="@string/dialog_descr"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="40dp"
                android:padding="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/dialog_cancel"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/accept"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:text="@string/dialog_accept"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>