<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
android:background="@android:color/transparent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_height="140dp">

        <RelativeLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerInParent="true"
            android:background="@drawable/circle_back">

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lin_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backanim"
        android:layout_marginTop="-65dp"
        android:background="@color/rating_background"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/title_app_rating"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/doyoulike"
            android:textAlignment="center"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/rate_info"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:numStars="5"
            android:rating="4"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/never_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="#E4E4E4"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/never_rate"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/later_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="#E4E4E4"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/more_later"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/rate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                app:cardBackgroundColor="@color/button_rating"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/rate_btn"
                    android:textAlignment="center"
                    android:textColor="@color/text_btn_rating"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/animation_positive"
        android:layout_width="match_parent"
        android:layout_below="@id/backanim"
        android:visibility="gone"
        android:padding="10dp"
        android:background="@color/rating_background"
        android:layout_marginTop="-65dp"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/anim_pos"
            app:lottie_loop="false"
 app:lottie_autoPlay="true"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            app:lottie_fileName="positive_.json"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:layout_below="@id/anim_pos"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:text="@string/positive_comment"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/animation_negative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backanim"
        android:layout_marginTop="-65dp"
        android:background="@color/rating_background"
        android:padding="10dp"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim_neg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:scaleType="fitXY"
            app:lottie_autoPlay="true"
            app:lottie_fileName="negative_.json"
            app:lottie_loop="false" />

        <TextView
            android:id="@+id/text_neg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/anim_neg"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/negative_comment"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/tell_us_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_neg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="#E4E4E4"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/send_mail"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="140dp"
        android:id="@+id/backanim"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:layout_height="140dp">


        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="140dp"
android:layout_centerInParent="true"
            android:id="@+id/animatop"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_fileName="rating_.json"
            android:scaleType="fitXY"

            android:layout_height="140dp"
            />

    </RelativeLayout>




</RelativeLayout>