<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginEnd="12dp"
    android:layout_marginStart="12dp"
    android:layout_height="wrap_content">
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="14dp"
                android:scaleType="centerCrop"
                android:tint="#F3BE1E"
                app:srcCompat="@drawable/ic_warn" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/dialog_advertency_t"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


        <WebView
            android:id="@+id/text_version"
            android:layout_width="match_parent"
            android:layout_height="315dp"
            android:layout_margin="12dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/btnversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"

                android:padding="3dp"
                android:text="@string/dialog_advertency_ok"
                android:textAlignment="textEnd"
android:layout_marginEnd="5dp"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"

                android:padding="3dp"
                android:text="@string/dialog_advertency_noappear"
                android:textAlignment="textEnd"

                android:textColor="@color/black"
                android:textSize="14sp" />

        </RelativeLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>


</RelativeLayout>