<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/loading_dialog"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_desc_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:text="@string/loading_dialog_desc"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loading_anim"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:scaleType="centerCrop"
                app:lottie_autoPlay="true"
                app:lottie_fileName="loading_def.json"
                app:lottie_loop="true" />

            <androidx.cardview.widget.CardView
                android:id="@+id/kk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="7dp"
                android:visibility="gone"
                app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/ok_butn"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/loading_ok"

                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>